--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^4.3.3
   connectivity_plus: ^5.0.2
   permission_handler: ^11.2.0
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
