--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   permission_handler: ^11.2.0
   geolocator: ^10.1.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
